Assingment 3 part 2-Update Makefile to include all

--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -2,6 +2,8 @@ CC=$(CROSS_COMPILE)gcc
 CFLAGS= -Wall
 TARGET= writer
 
+all: $(TARGET)
+
 $(TARGET): writer.o
 	$(CC) $(CFLAGS) -o $(TARGET) writer.o
 
